# SmartModbus

./: .clang-format  CMakeLists.txt  Claude.md  FINAL_STATUS.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  PRODUCTION_PROGRESS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  UNIT_TESTS_COMPLETE.md
cmake/: CompilerWarnings.cmake  StaticAnalysis.cmake
docs/: API_MANUAL.md  smartmodbus spec.md
examples/: CMakeLists.txt  README.md
examples/advanced_merge/: main.c
examples/basic_rtu/: main.c
examples/basic_tcp/: main.c
examples/embedded_static/: main.c
include/smartmodbus/: mb_config.h  mb_error.h  mb_transport.h  mb_types.h  smartmodbus.h
src/: CMakeLists.txt
src/core/: char_model.c  char_model.h  fc_policy.c  fc_policy.h  ffd_pack.c  ffd_pack.h  gap_merge.c  gap_merge.h
src/master/: master_api.c  request_optimizer.c  request_optimizer.h  response_parser.c  response_parser.h
src/protocol/: ascii_frame.c  ascii_frame.h  crc16.c  crc16.h  frame_builder.c  frame_builder.h  lrc.c  lrc.h  rtu_frame.c  rtu_frame.h  tcp_frame.c  tcp_frame.h
src/utils/: block_utils.c  block_utils.h  memory_pool.c  memory_pool.h
tests/: CMakeLists.txt
tests/unit/: test_ascii_frame.c  test_block_utils.c  test_cost_model.c  test_crc16.c  test_ffd_pack.c  test_gap_merge.c  test_lrc.c  test_response_parser.c  test_rtu_frame.c  test_tcp_frame.c
